8/15 UI 개선, 기능 추가 (속도 조절)

--- a/css/custom.css
+++ b/css/custom.css
@@ -14,3 +14,22 @@
     animation-iteration-count: infinite;
     animation-direction: alternate;
 }
+
+#nav {
+    text-align: center;
+}
+
+.nav-link {
+    padding: 0.5rem 1rem;
+    background-color: #777;
+    border-color: #fff;
+}
+
+.nav-link.active{
+    color: black;
+    font-weight: bold;
+}
+
+.custom-select {
+    max-width: 10rem;
+}
